--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         body {
             font-family: sans-serif;
         }
+        .name {
+            font-size: 2.5em;
+            text-align: center;
+            margin: 0.5em 0;
+        }
         .pub-list {
             list-style: none;
             padding: 0;
@@ -38,9 +43,7 @@
             <tbody>
               <tr>
                 <td style="padding:2.5%;width:63%;vertical-align:middle">
-                  <p class="name" style="text-align:center;">
-                    Zifan (Eric) Zhao
-                  </p>
+                  <p class="name">Zifan (Eric) Zhao</p>
                   <p>
                     I'm a junior undergraduate at NYU Shanghai majoring in Computer Science and Mathematics. My research interests lie in embodied intelligence, multimodal representation learning, and reinforcement learning.
                   </p>
@@ -55,8 +58,8 @@
                   </p>
                 </td>
                 <td style="padding:2.5%;width:37%;max-width:37%;vertical-align:middle;">
-                  <a href="https://github.com/Exiam6/Exiam6.github.io/blob/main/Photo6.jpg?raw=true">
-                    <img style="width:100%;max-width:100%;object-fit:cover;border-radius:50%;" alt="profile photo" src="https://github.com/Exiam6/Exiam6.github.io/blob/main/Photo6.jpg?raw=true">
+                  <a href="images/Photo6.jpg">
+                    <img style="width:100%;max-width:100%;object-fit:cover;border-radius:50%;" alt="profile photo" src="images/Photo6.jpg">
                   </a>
                 </td>
               </tr>
@@ -102,14 +105,14 @@
                   <h2>Publications</h2>
                   <ul class="pub-list">
                     <li>
-                      <img src="LS.png" alt="Label Smoothing icon" class="pub-icon">
+                      <img src="images/LS.png" alt="Label Smoothing icon" class="pub-icon">
                       <a href="https://arxiv.org/abs/2402.03979" target="_blank"><strong>Cross Entropy versus Label Smoothing: A Neural Collapse Perspective</strong></a><br>
                       Li Guo, Keith Ross, <u><b>Zifan Zhao</b></u>, George Andriopoulos, Shuyang Ling, Yufeng Xu, Zixuan Dong<br>
                       <em>TMLR 2025</em>
                     </li>
                     <hr>
                     <li>
-                      <img src="NRC.png" alt="Neural Collapse icon" class="pub-icon">
+                      <img src="images/NRC.png" alt="Neural Collapse icon" class="pub-icon">
                       <a href="https://arxiv.org/abs/2409.04180" target="_blank"><strong>The Prevalence of Neural Collapse in Neural Multivariate Regression</strong></a><br>
                       <u><b>Zifan Zhao*</b></u>, Li Guo*, George Andriopoulos*, Zixuan Dong*, Keith Ross*†<br>
                       <em>NeurIPS 2024</em>
