--- a/index.html
+++ b/index.html
@@ -30,11 +30,26 @@
                   <a href="https://scholar.google.com/citations?user=PWVoKaoAAAAJ&hl=zh-CN&oi=sra" target="_blank">Google Scholar</a>
                 </p>
               </td>
-              <td style="padding:2.5%;width:37%;max-width:37%;vertical-align:middle">
-                <a href="images/Photo6.jpg">
-                  <img src="images/Photo6.jpg" alt="profile photo" style="width:100%;max-width:100%;height:auto;object-fit:cover;border-radius:50%;display:block;margin:0 auto;">
-                </a>
-              </td>
+              <td style="padding:2.5%;width:37%;max-width:37%;vertical-align:baseline">
+              <div class="flip-container">
+                <div class="flipper">
+                  <div class="front">
+                    <img
+                      src="images/Photo6.jpg"
+                      alt="profile photo front"
+                      style="width:100%;height:auto;object-fit:cover;border-radius:50%;display:block;margin:0 auto;"
+                    />
+                  </div>
+                  <div class="back">
+                    <img
+                      src="images/Photo5.jpg"
+                      alt="profile photo back"
+                      style="width:100%;height:auto;object-fit:cover;border-radius:50%;display:block;margin:0 auto;"
+                    />
+                  </div>
+                </div>
+              </div>
+            </td>
             </tr>
           </tbody></table>
 
