--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   </head>
 
   <body>
-    <table style="width:100%;max-width:800px;border:0;border-spacing:0;border-collapse:separate;margin:0 auto;"><tbody>
+    <table class="profile-row" style="width:100%;max-width:800px;border:0;border-spacing:0;border-collapse:separate;margin:0 auto;"><tbody>
       <tr>
         <td style="padding:0">
           <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin:0 auto;"><tbody>
             <tr>
-              <td style="padding:2.5%;width:63%;vertical-align:middle">
+              <td class="profile-text" style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align:center;">Zifan (Eric) Zhao</p>
                 <p>
                   I'm a junior undergraduate at NYU Shanghai majoring in Computer Science and Mathematics. My research interests lie in embodied intelligence, multimodal representation learning, and reinforcement learning.
@@ -30,7 +30,7 @@
                   <a href="https://scholar.google.com/citations?user=PWVoKaoAAAAJ&hl=zh-CN&oi=sra" target="_blank">Google Scholar</a>
                 </p>
               </td>
-              <td style="padding:2.5%;width:37%;max-width:37%;vertical-align:baseline">
+              <td class="profile-pic" style="padding:2.5%;width:37%;max-width:37%;vertical-align:baseline">
               <div class="flip-container">
                 <div class="flipper">
                   <div class="front">
