--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
                 <hr class="section-divider">
                 <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin:0;">
                   <tbody>
+
+                    <!--ViTaL -->
+                    <tr>
+                      <td style="width:43%;vertical-align:middle">
+                        <div class="one">
+                          <img src="assets/ViTaL.gif" alt="ViTaL icon">
+                        </div>
+                      </td>
+                      <td style="width:60%;vertical-align:middle">
+                        <span class="papertitle"><a href="https://arxiv.org/abs/2506.13762" target="_blank"><strong>Touch begins where vision ends: Generalizable policies for contact-rich manipulation</strong></a></span><br>
+                        <u><b>Zifan Zhao</b></u>,  Siddhant Haldar, Jinda Cui, Lerrel Pinto, Raunaq Bhirangi<br>
+                      </td>
+                    </tr>
+
+
                     <!--LS -->
                     <tr>
                       <td style="width:43%;vertical-align:middle">
