--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <h2>News</h2>
                 <hr class="section-divider">
                 <ul>
+                  <li><strong>2025-07:</strong> We've released <a href="https://vitalprecise.github.io/" target="_blank">ViTaL</a>, a framework for precise, generalizable robot manipulation</li>
                   <li><strong>2025-04:</strong> One <a href="https://arxiv.org/abs/2402.03979" target="_blank">paper</a> is accepted at TMLR 2025.</li>
                   <li><strong>2024-09:</strong> One <a href="https://arxiv.org/abs/2409.04180" target="_blank">paper</a> is accepted at NeurIPS 2024.</li>
                   <li><strong>2024-08:</strong> Our TARS robot from <em>Interstellar</em> took its first step! <a href="https://www.youtube.com/shorts/3q91EYxd1DA" target="_blank">Watch here</a>.</li>
@@ -84,8 +85,8 @@
                         </div>
                       </td>
                       <td style="width:60%;vertical-align:middle">
-                        <span class="papertitle"><a href="https://arxiv.org/abs/2506.13762" target="_blank"><strong>Touch begins where vision ends: Generalizable policies for contact-rich manipulation</strong></a></span><br>
-                        <u><b>Zifan Zhao</b></u>,  Siddhant Haldar, Jinda Cui, Lerrel Pinto, Raunaq Bhirangi<br>
+                        <span class="papertitle"><a href="hhttps://vitalprecise.github.io/" target="_blank"><strong>Touch begins where vision ends: Generalizable policies for contact-rich manipulation</strong></a></span><br>
+                        <u><b>Zifan Zhao</b></u>,  Siddhant Haldar, Jinda Cui, Lerrel Pinto, Raunaq Bhirangi†<br>
                       </td>
                     </tr>
 
