--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                         </div>
                       </td>
                       <td style="width:60%;vertical-align:middle">
-                        <span class="papertitle"><a href="hhttps://vitalprecise.github.io/" target="_blank"><strong>Touch begins where vision ends: Generalizable policies for contact-rich manipulation</strong></a></span><br>
+                        <span class="papertitle"><a href="https://vitalprecise.github.io/" target="_blank"><strong>Touch begins where vision ends: Generalizable policies for contact-rich manipulation</strong></a></span><br>
                         <u><b>Zifan Zhao</b></u>,  Siddhant Haldar, Jinda Cui, Lerrel Pinto, Raunaq Bhirangi†<br>
-                        <em>CoRL 2025 GenPriors Workshop Oral</em>
+                        <em>CoRL 2025 GenPriors Workshop Oral</em><br>
                         <em>RSS 2025 Workshops</em>
                       </td>
                     </tr>
