--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
               <td class="profile-text" style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align:center;">Zifan (Eric) Zhao</p>
                 <p>
-                  I'm a junior undergraduate at NYU Shanghai majoring in Computer Science and Mathematics. My research interests lie in embodied intelligence, multimodal representation learning, and reinforcement learning.
+                  I'm a senior undergraduate at NYU Shanghai majoring in Computer Science and Mathematics. My research interests lie in embodied intelligence, multimodal representation learning, and reinforcement learning.
                 </p>
                 <p>
-                  I'm currently working with <a href="https://www.lerrelpinto.com/" target="_blank">Prof. Lerrel Pinto</a> in the General-purpose Robotics and AI Labs (GRAIL). I’m the founding chair of <a href="https://nyush.acm.org/" target="_blank">NYUSH ACM Student Chapter</a> and organized the <a href="http://www.nyushdic.com/" target="_blank">Digital Innovation Challenge 2023</a>.
+                  I'm currently working with <a href="https://www.lerrelpinto.com/" target="_blank">Prof. Lerrel Pinto</a> in the General-purpose Robotics and AI Labs (GRAIL) and <a href="https://www.sainingxie.com/" target="_blank">Prof. Saining Xie</a> at VISIONx. I’m the founding chair of <a href="https://nyush.acm.org/" target="_blank">NYUSH ACM Student Chapter</a> and organized the <a href="http://www.nyushdic.com/" target="_blank">Digital Innovation Challenge 2023</a>.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:zz4330@nyu.edu">Email</a> &nbsp;/&nbsp;
