--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <hr class="section-divider">
                 <ul>
                   <li><strong>2025-09:</strong> <a href="https://vitalprecise.github.io/" target="_blank">ViTaL</a> was accepted at CoRL 2025 as a workshop best paper! See you in Korea!</li>
-                  <li><strong>2025-07:</strong> We've released <a href="https://vitalprecise.github.io/" target="_blank">ViTaL</a>, a framework for precise, generalizable robot manipulation</li>
+                  <li><strong>2025-07:</strong> We've released <a href="https://vitalprecise.github.io/" target="_blank">ViTaL</a>, a framework for precise, generalizable robot manipulation.</li>
                   <li><strong>2025-04:</strong> One <a href="https://arxiv.org/abs/2402.03979" target="_blank">paper</a> is accepted at TMLR 2025.</li>
                   <li><strong>2024-09:</strong> One <a href="https://arxiv.org/abs/2409.04180" target="_blank">paper</a> is accepted at NeurIPS 2024.</li>
                   <li><strong>2024-08:</strong> Our TARS robot from <em>Interstellar</em> took its first step! <a href="https://www.youtube.com/shorts/3q91EYxd1DA" target="_blank">Watch here</a>.</li>
