add image container

--- a/index.html
+++ b/index.html
@@ -31,25 +31,18 @@
                   <a href="https://scholar.google.com/citations?user=PWVoKaoAAAAJ&hl=zh-CN&oi=sra" target="_blank">Google Scholar</a>
                 </p>
               </td>
-              <td class="profile-pic" style="padding:2.5%;width:37%;max-width:37%;vertical-align:baseline">
-              <div class="flip-container">
-                <div class="flipper">
-                  <div class="front">
-                    <img
-                      src="images/Photo6.jpg"
-                      alt="profile photo front"
-                      style="width:100%;height:auto;object-fit:cover;border-radius:50%;display:block;margin:0 auto;"
-                    />
+              <td class="profile-pic">
+                <button class="flip-container" aria-label="Flip profile photo" type="button">
+                  <div class="flipper">
+                    <div class="front">
+                      <img src="images/Photo6.jpg" alt="profile photo front">
+                    </div>
+                    <div class="back">
+                      <img src="images/Photo8.jpg" alt="profile photo back">
+                    </div>
                   </div>
-                  <div class="back">
-                    <img
-                      src="images/Photo8.jpg"
-                      alt="profile photo back"
-                      style="width:100%;height:auto;object-fit:cover;border-radius:50%;display:block;margin:0 auto;"
-                    />
-                  </div>
-                </div>
-              </div>
+                </button>
+              </td>
             </td>
             </tr>
           </tbody></table>
@@ -94,7 +87,7 @@
                         <em>RSS 2025 Workshops</em>
                       </td>
                     </tr>
-                    
+
                     <!--LS -->
                     <tr>
                       <td style="width:43%;vertical-align:middle">
